<resources>
    <string name="app_name">RetrofitTutorial</string>
    <string name="create_acc">Create New Account</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="already_registered">Already have an account? Login here</string>
    <string name="login">Login</string>
    <string name="not_registered">Don\'t have an account? Register here</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="demo_user">Demo User</string>
    <string name="demo_email">someone@something.com</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="update_your_password">Update Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="update_info">Update Info</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>